feat: The app now allows the user to save the image to Photos.
	- Now the user will be able to save the photo to the library.
	- Once the user long press the image, activity controller will pop up to the user to save the image.
	- The app will ask the user for a permission to save the photo to the library.

--- a/On the Map Tourist/Info.plist
+++ b/On the Map Tourist/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow On the Map Tourist to access photos to save the Photo.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Allow On the Map Tourist to use your location?</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
